--- a/web_home/css_home/style.css
+++ b/web_home/css_home/style.css
@@ -8,7 +8,7 @@ body{
 	padding:0;
 	margin:0;
 	position:relative;
-	font-family: 'Poiret One', cursive;
+	font-family: 'Poiret One';
 }
 body a{
     transition:0.5s all;
@@ -50,7 +50,7 @@ header {
     position: absolute;
     z-index: 9;
     width: 100%;
-    background: rgba(37, 37, 37, 0.54);
+    background: rgba(37, 37, 37, 0.9);
 }
 .bg-light {
     background-color: transparent !important;
@@ -103,7 +103,7 @@ h1{
     line-height: 50px;
 }
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-    color: #F44336;
+    color: #fb8500;
     border: 4px solid;
 }
 .navbar-brand span {
@@ -127,7 +127,7 @@ h1{
 }
 .w3layouts_banner_info p {
     text-transform: uppercase;
-    color: #212121;
+    color: #fb8500;
     letter-spacing: 7px;
     font-weight: bold;
     margin-bottom: 1em;
@@ -135,7 +135,7 @@ h1{
 .link-effect-2 a {
 	overflow: hidden;
 	padding: 20px;
-	color: #797878;
+	color: #fb8500;
 	font-weight: 400;
 }
 .link-effect-2 a span {
@@ -196,8 +196,8 @@ a.read2{
 	background:#000!important;
 }
 a.read:hover, a.read2:hover{
-    background: #3F51B5;
-	border: 2px solid #3F51B5;
+    background: #fb8500;
+	border: 2px solid #fb8500;
 }
 /*-- //banner --*/
 
@@ -213,7 +213,7 @@ h3.heading,h2.heading {
 .card-title {
     text-transform: uppercase;
     font-size: 20px;
-    color: #F44336;
+    color: #fb8500;
     font-weight: bold;
     letter-spacing: 3px;
     position: relative;
@@ -232,7 +232,7 @@ h3.heading,h2.heading {
 .card-title:after {
     position: absolute;
     content: '';
-    background: #F44336;
+    background: #fb8500;
     width: 20%;
     height: 2px;
     left: 40%;
@@ -241,7 +241,7 @@ h3.heading,h2.heading {
 .titleleft:after {
     position: absolute;
     content: '';
-    background: #F44336;
+    background: #fb8500;
     width: 20%;
     height: 2px;
     left: 0%;
@@ -250,7 +250,7 @@ h3.heading,h2.heading {
 .titleright:after {
     position: absolute;
     content: '';
-    background: #F44336;
+    background: #fb8500;
     width: 20%;
     height: 2px;
     left: auto;
@@ -300,7 +300,7 @@ h3.stat-title {
 .bottom-grids h3 {
     text-transform: uppercase;
     font-size: 27px;
-    color: #F44336;
+    color: #fb8500;
     font-weight: bold;
     letter-spacing: 3px;
     position: relative;
@@ -553,7 +553,7 @@ h5.mt-0 {
 }
 
 .comment-top input[type="submit"]:hover {
-    background: #222;
+    background: #fb8500;
 }
 
 .single-gd form input[type="email"] {
