--- a/web_profile/css/style.css
+++ b/web_profile/css/style.css
@@ -29,7 +29,7 @@ img{max-width:100%;}
 /*end reset*/
 html, body{
     font-size: 100%;
-    background: url(../images/3.png)repeat 0px 0px;
+    background: url(../images/cover4.jpg)repeat 0px 0px;
     background-attachment: fixed;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -97,7 +97,7 @@ input[type="submit"],.agileits_copyright p a,input[type="reset"]{
     width:670px;
 	/*height:320px;*/
     overflow:hidden;
-	background: rgba(76, 72, 72, 0.87);
+	background: rgba(0, 0, 0, 0.6);
 }
 .step{
     float:left;
@@ -120,8 +120,8 @@ input[type="submit"],.agileits_copyright p a,input[type="reset"]{
 #navigation ul li a{
     display:block;
     height:45px;
-    background-color:#444;
-    color:#777;
+    background-color:rgb(251, 133, 0);
+    color:rgb(251, 133, 0);
     outline:none;
 	font-size: 1em;
     font-weight:bold;
@@ -169,7 +169,7 @@ input[type="submit"],.agileits_copyright p a,input[type="reset"]{
 }
 #steps form legend {
     text-align: center;
-    color: #00e8ff;
+    color: #fb8500;
     font-size: 34px;
     font-weight: 600;
     text-transform: uppercase;
@@ -202,7 +202,7 @@ p.agileinfo_para {
 }
 p.step_w3layouts {
     background: #D9D9D9 !important;
-    color: #212121;
+    color: #000000;
 }
 .w3_agile ul li i{
 	font-size:30px;
@@ -232,8 +232,8 @@ p.step_w3layouts {
 .agilecontactw3ls-grid input[type="text"], .agilecontactw3ls-grid input[id="HOSTEL_NAME"], .agilecontactw3ls-grid input[list="HOSTEL_NAME"], .agilecontactw3ls-grid input[type="password"], .agilecontactw3ls-grid input[type="radio"], .agilecontactw3ls-grid input[type="email"],.agilecontactw3ls-grid textarea {
 	width: 93%;
 	padding: 10px;
-	border: 1px solid #AFAFAF;
-	color: #AFAFAF;
+	border: 1px solid #000000;
+	color: #000000;
 	outline: none;
 	background: transparent;
 	border-radius: 0;
@@ -243,8 +243,8 @@ p.step_w3layouts {
 .myclass{
   width: 93%;
 	padding: 10px;
-	border: 1px solid #AFAFAF;
-	color: #AFAFAF;
+	border: 1px solid #000000;
+	color: #000000;
 	outline: none;
 	background: transparent;
 	border-radius: 0;
